compiler/testData/diagnostics/tests/overload/ConflictingOverloadsIdenticalExtFunsInPackage.jet
package extensionFunctions

<!CONFLICTING_OVERLOADS!>fun Int.qwe(<!UNUSED_PARAMETER!>a<!>: Float)<!> = 1

<!CONFLICTING_OVERLOADS!>fun Int.qwe(<!UNUSED_PARAMETER!>a<!>: Float)<!> = 2
